# Proxifier-For-Linux

./: .gitignore  Authors.md  Contributing.md  Makefile  Makefile.am  Makefile.in  README.md  Reporting.md  TODO  base64.c  base64.h  config.h.in  configure  configure.ac  debug_suggestions.txt  fakednsserver  fakehttpserver  fakehttpserver.c  fakehttpsserver  fakehttpsserver.c  howitworks.txt  install  install.sh  iptables443.conf  iptables80.conf  logger.c  proxifier  proxifier.c  proxifier.conf  proxifier.sh  proxy.c  uninstall
doc/: Makefile.am  proxifier.txt
executables/: readme.txt
service/: Makefile.am  proxifier._service
src/: Makefile.am  base64.c  base64.h  bit.c  bit.h  dns.c  dns.h  fakednsserver.c  fakehttpserver.c  firewall.c  firewall.h  http.c  http.h  logger.c  proxifier.c  proxifier.h  proxy.c  proxy.h  proxy_configuration.c  proxy_configuration.h  proxy_dns.c  proxy_dns.h  proxy_functions.c  proxy_functions.h  proxy_http.c  proxy_http.h  proxy_socket.c  proxy_socket.h  proxy_structures.c  proxy_structures.h  socket.c  socket.h
