bin_PROGRAMS = proxifier

proxifier_SOURCES = \
src/proxifier.c \
src/proxifier.h \
src/proxy.c \
src/proxy.h \
src/proxy_http.c \
src/proxy_http.h \
src/proxy_socket.c \
src/proxy_socket.h \
src/proxy_structures.c \
src/proxy_structures.h \
src/proxy_functions.c \
src/proxy_functions.h \
src/proxy_configuration.c \
src/proxy_configuration.h \
src/proxy_dns.c \
src/proxy_dns.h \
src/http.c \
src/dns.c \
src/dns.h \
src/http.h \
src/base64.c \
src/base64.h \
src/firewall.c \
src/firewall.h \
src/bit.c \
src/bit.h \
config.h

AM_CFLAGS=-I$(abs_srcdir)/src -I$(abs_srcdir)
